--- a/style.css
+++ b/style.css
@@ -12,68 +12,37 @@ body {
 }
 
 #login li {
-list-style-type: none;
+  list-style-type: none;
 }
 
 #login input,
-#login button {
-margin: 3px;
-padding: 17px 40px;
-width: 220px;                     
-cursor: pointer;
-border: 0;
-background-color: white;
-box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
-letter-spacing: 1.5px;
-text-transform: uppercase;
-font-size: 15px;
-transition: all 0.10s ease;
-}
-
-#login button {
-width: 300px;
-}
-
-#order{
-display: flex;
-align-items: center;
-min-height: 100vh;
-}
-
+#login button,
+#order input,
 #order button {
-margin: 2px 0;
-padding: 17px 40px;
-width: 300px;
-cursor: pointer;
-border: 0;
-background-color: white;
-box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
-letter-spacing: 1.5px;
-text-transform: uppercase;
-font-size: 15px;
-transition: all 0.10s ease;
+  margin: 3px;
+  padding: 17px 40px;
+  width: 220px;
+  cursor: pointer;
+  border: 0;
+  background-color: white;
+  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+  letter-spacing: 1.5px;
+  font-size: 15px;
+  transition: all 0.10s ease;
 }
 
-#order input {
-margin: 2px 0;
-padding: 17px 40px;
-width: 220px;                     
-cursor: pointer;
-border: 0;
-background-color: white;
-box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
-letter-spacing: 1.5px;
-text-transform: uppercase;
-font-size: 15px;
-transition: all 0.10s ease;
+#login button,
+#order button {
+  width: 300px;
 }
 
-#order button:active {
-letter-spacing: 3px;
-background-color: #ee1ed5;
-color: hsl(0, 0%, 100%);
-box-shadow: #ff5dec 0px 0px 0px 0px;
-transition: 10ms;
+#order button:active,
+#order button:focus {
+  letter-spacing: 3px;
+  background-color: #ee1ed5;
+  color: hsl(0, 0%, 100%);
+  box-shadow: #ff5dec 0px 0px 0px 0px;
+  transition: 10ms;
 }
 
 ul {
